# FingerTree

FingerTree/: CHANGELOG.md  FingerTree.cabal  Test.hs  Tree.hs
FingerTree/doc/html/FingerTree/: FingerTree.haddock  FingerTree.html  Tree.html  doc-index.html  index.html
