name:                FingerTree
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10


library 
  exposed-modules:  Tree
  build-depends:       
      base >=4.12 
  default-language:    Haskell2010

Test-Suite Tree-test
  main-is:  Test.hs
  other-modules: Tree
  type: exitcode-stdio-1.0
  build-depends:
      base >=4.12
    , QuickCheck
  default-language:    Haskell2010
